# EmbeddedOs

./: CMakeLists.txt
include/EmbeddedOs/: foo.hpp
src/: CMakeLists.txt  foo.cpp
